@@ -23,6 +23,7 @@
 #include "inferior.h"
 #include "symfile.h"		/* for entry_point_address */
 #include "gdbcore.h"
+#include "arch-utils.h"
 #include "floatformat.h"
 
 #include "objfiles.h"
